k8s/overlays/prod/patches/ws-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-router
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ws-router
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
